2007-02-15  Dmitry Dulepov  <dmitry@typo3.org>

 # Fixed wrong column name in SQL query (class.tx_templavoila_referenceelementswizard.php)

2007-02-05  Dmitry Dulepov  <dmitry@typo3.org>

	RELEASE OF TEMPLAVOILA 1.3.0

2007-01-27  Dmitry Dulepov  <dmitry@typo3.org>

 # Fixed character conversion problem that appeared in 1.2.0
 # Fixed empty field values in "Page related information" tab (bug #4576)
 # Fixed problem with preserving <meta> tag during "Modify DS/TO" (this allows me_templavoilalayout and localization to retain its data)
 # Fixed bug #3143: New Content Element is created as Reference
 # Fixed bug #3958: New content created as a reference after a reference
 # Fixed bug #4650: respect me_templavoilalayout
 + Feature request #4847: Access control for DS/TO (thanks to e-netconsulting KG Hamburg AND Star Finanz GmbH Hamburg as Sponsor!)

2007-01-24  Dmitry Dulepov  <dmitry@typo3.org>

 # Fixed bug 4842: TV Does not render the Site on T3 4.1 Beta 3
 # Fixed bug 2553: When Modify DS/TO und saving afterwards, the parts from the HTML header are lost

	RELEASE OF TEMPLAVOILA 1.2.1

2007-01-20  Dmitry Dulepov  <dmitry@typo3.org>

 # Fixed bug 4085: Russian titles of fields shows wrong in Page module (uft8 encoding)
 # Fixed bug 4736: MSSQL and TemplaVoila TO-Selection in Page-Module
 # Fixed bug 4741: XML fields are not tabbable and fixed font
 # Fixed bug 4750: Database compatibilty
 # Fixed bug 4778: Filelinks in FCEs are not registered as "references"
 # Fixed bug 4812: RTE field does not respect system RTE configuration
 # Fixed: wrong parameter to link_edit

	RELEASE OF TEMPLAVOILA 1.2

2006-12-29  Dmitry Dulepov  <dmitry@typo3.org>

 + Tabbed interface for mapping (many thanks to Benjamin Mack for initial patch!). This fixes bugs 4593, 4015.

2006-12-27  Dmitry Dulepov  <dmitry@typo3.org>

 # Bug 4697: Error in TemplaVoila API

2006-12-21 - Dmitry Dulepov <typo3@accio.lv>
