@@ -1,3 +1,7 @@
+2007-02-19  Dmitry Dulepov  <dmitry@typo3.org>
+
+ # Fixed wrong character encoding in mod1 if forceCharset is empty
+
 2007-02-15  Dmitry Dulepov  <dmitry@typo3.org>
 
  # Fixed wrong column name in SQL query (class.tx_templavoila_referenceelementswizard.php)
